--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ highlighter: rouge
 # Paginate
 paginate: 10
 
-
+# timezone: America/Mexico City
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
