--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "predeploy":"npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b master",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
